--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/ChartWindowView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/ChartWindowView.xaml
@@ -53,8 +53,7 @@
                 </LinearGradientBrush>
             </Rectangle.Fill>
         </Rectangle>
-        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="{x:Static resw:Resources.ChartWindowTitle}" FontSize="28" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
+        <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{x:Static resw:Resources.ChartWindowTitle}" Style="{StaticResource AppTitleTextBlock}" />
         <StackPanel Grid.Column="0" Grid.Row="1" Grid.RowSpan="2">
             <Button Style="{StaticResource AppGraphiteButton}" Command="{Binding OpenChartViewCommand}" x:Name="Btn1">
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=Btn1, Path=ActualWidth}">
