--- a/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:RepositoryParser.Resources">
+                    xmlns:local="clr-namespace:RepositoryParser.Resources"
+                    xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit">
     
     
     <Style x:Key="AppGraphiteButton" TargetType="Button">
@@ -10,6 +11,36 @@
         <Setter Property="Foreground" Value="{StaticResource Grey}"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="FontSize" Value="13"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border  RenderTransformOrigin="0.5 0.5"
+                              x:Name="Border"  
+                              Background="{TemplateBinding Background}">
+                        <Border.RenderTransform>
+                            <ScaleTransform ScaleX="1.0" ScaleY="1.0" CenterX="0.5" CenterY="0.5" />
+                        </Border.RenderTransform>
+                        <ContentPresenter 
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                RecognizesAccessKey="True"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsPressed" Value="true">
+                            <Trigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard AutoReverse="True">
+                                        <DoubleAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="RenderTransform.ScaleX" From="1.0" To="0.9" Duration="00:00:0.1"/>
+                                        <DoubleAnimation Storyboard.TargetName="Border" Storyboard.TargetProperty="RenderTransform.ScaleY" From="1.0" To="0.9" Duration="00:00:0.1"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.EnterActions>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style x:Key="AppWhiteTextBlock" TargetType="TextBlock">
@@ -33,4 +64,22 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
     </Style>
+
+
+    <Style x:Key="ColumnDataPoint" TargetType="chartingToolkit:ColumnDataPoint">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="chartingToolkit:ColumnDataPoint">
+                    <Grid>
+                        <Rectangle Fill="{StaticResource Graphite}" Stroke="Black"/>
+                        <Grid Margin="0 -20 0 0" HorizontalAlignment="Center" VerticalAlignment="Top">
+                            <TextBlock Text="{TemplateBinding FormattedDependentValue}" Margin="2"/>
+                        </Grid>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
 </ResourceDictionary>
