--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -170,13 +170,10 @@
 
         <DockPanel Grid.Row="2" Grid.Column="0" Margin="0,10,0,5">
             <Button x:Name="GoToAnalisysBtn" 
-                    Height="50" 
                     VerticalAlignment="Top" 
                     Command="{Binding GoToPageAnalysisCommand}" 
-                    Background="{StaticResource Graphite}"
-                    Foreground="{StaticResource Grey}"
-                    FontWeight="Light"
-                    Margin="0,0,0,5">
+                    Style="{StaticResource AppGraphiteButton}"
+                    >
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=GoToAnalisysBtn, Path=ActualWidth}" >
                     <Image Source="../Assets/Icons/Analysis_grey.png" Width="24" Margin="10,0,10,0"/>
                     <TextBlock Text="{x:Static resw:Resources.AnalysisButton}" VerticalAlignment="Center" FontSize="13"/>
@@ -187,26 +184,19 @@
 
         <StackPanel Grid.Row="2" Grid.Column="2" Margin="0,10,0,5" Grid.RowSpan="4">
             <Button x:Name="ClearDataBase" 
-                    Height="50" 
                     VerticalAlignment="Top" 
-                    FontWeight="Light"
-                    Background="{StaticResource Graphite}"
-                    Foreground="{StaticResource Grey}"
+                    Style="{StaticResource AppGraphiteButton}"
                     Command="{Binding AsyncClearDBCommand}" 
-                    Margin="0,0,0,5">
+                    >
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=ClearDataBase, Path=ActualWidth}" >
                     <Image Source="../Assets/Icons/Delete_grey.png" Width="24" Margin="10,0,10,0"/>
                     <TextBlock Text="{x:Static resw:Resources.ClearDBButton}" VerticalAlignment="Center" FontSize="13"/>
                 </StackPanel>
             </Button>
             <Button x:Name="RefreshBtn" 
-                    Height="50" 
                     VerticalAlignment="Top"
-                    FontWeight="Light"
-                    Background="{StaticResource Graphite}"
-                    Foreground="{StaticResource Grey}"
                     Command="{Binding RefreshCommand}" 
-                    Margin="0,0,0,5"
+                    Style="{StaticResource AppGraphiteButton}"
                     Padding="0"
                     >
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=RefreshBtn, Path=ActualWidth}" >
@@ -216,13 +206,10 @@
             </Button>
                     
             <Button x:Name="Save"
-                    Height="50" 
                     VerticalAlignment="Bottom" 
-                    Background="{StaticResource Graphite}"
-                    Foreground="{StaticResource Grey}" 
                     Command="{Binding ExportFileCommand}"
-                    FontWeight="Light"
-                    Margin="0,0,0,5">
+                    Style="{StaticResource AppGraphiteButton}"
+                    >
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=Save, Path=ActualWidth}" >
                     <Image Source="../Assets/Icons/Export_grey.png" Width="24" Margin="10,0,10,0"/>
                     <TextBlock Text="{x:Static resw:Resources.ExportToFileButton}" VerticalAlignment="Center" FontSize="13"/>
@@ -234,7 +221,7 @@
                    Grid.RowSpan="6"
                    Grid.ColumnSpan="3"
                    Visibility="{Binding ProgressBarVisibility, Converter={StaticResource BoolToVisibilityConverter}, UpdateSourceTrigger=PropertyChanged}"  
-                   Opacity="0.9"
+                   Opacity="0.75"
                    Background="{StaticResource Grey}"
                    HorizontalAlignment="Stretch"
                    VerticalAlignment="Stretch"
@@ -253,7 +240,7 @@
                                        Height="18"
                                        Margin="3"
                                        Opacity="1"
-                                        Foreground="{StaticResource MyGreen}"
+                                       Foreground="{StaticResource Graphite}"
                                        />
             <Separator/>
             <TextBlock Text="{x:Static resw:Resources.ProgressBarText}" Foreground="{StaticResource MyGreen}" FontSize="18" Visibility="{Binding IsOpening, Converter={StaticResource BoolToVisibilityConverter}}"/>
