--- a/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityChartView.xaml
@@ -1,4 +1,4 @@
-﻿<controls:MetroWindow x:Class="RepositoryParser.View.HourActivityView"
+﻿<controls:MetroWindow x:Class="RepositoryParser.View.DayActivityChartView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,9 +8,9 @@
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
-         Title="{x:Static resw:Resources.HourActivityView}" Height="600" Width="800"
-        DataContext="{Binding Source={StaticResource Locator}, Path=HourActivity}"
-        Icon="../Assets/Icons/Chart_Icon_Main.png"
+        Title="{x:Static resw:Resources.DayActivityView}" Height="600" Width="800"
+        DataContext="{Binding Source={StaticResource Locator}, Path=DayActivity }"
+        Icon="../../Assets/Icons/Chart_Icon_Main.png"
         >
     <Grid>
         <Grid.ColumnDefinitions>
@@ -21,6 +21,7 @@
             <RowDefinition Height="9*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+
         <Rectangle Grid.ColumnSpan="1000" Grid.Row="0">
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -29,20 +30,18 @@
             </Rectangle.Fill>
         </Rectangle>
 
-
-
-        <Label Grid.Row="0" x:Name="WelcomeLabel" Content="{x:Static resw:Resources.HoursActivityWindowTitle}" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <Label Grid.Row="0" x:Name="WelcomeLabel" Content="{x:Static resw:Resources.DayActivityWindowTitle}" FontSize="28" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <TabControl Grid.Column="0" Grid.Row="1">
             <TabItem Header="{x:Static resw:Resources.Chart}">
-                <chartingToolkit:Chart x:Name="Chart" Title="{x:Static resw:Resources.HoursActivityChartChart}" Background="{StaticResource Grey}">
+                <chartingToolkit:Chart Title="{x:Static resw:Resources.DayActivityChartChart}" Background="{StaticResource Grey}">
                     <chartingToolkit:Chart.LegendStyle>
                         <Style TargetType="Control">
-                            <Setter Property="Width" Value="0"/>
-                            <Setter Property="Height" Value="0"/>
+                            <Setter Property="Width" Value="0" />
+                            <Setter Property="Height" Value="0" />
                         </Style>
                     </chartingToolkit:Chart.LegendStyle>
                     <chartingToolkit:Chart.Series>
-                        <chartingToolkit:ColumnSeries
+                        <chartingToolkit:LineSeries
                                     ItemsSource="{Binding KeyCollection, Mode=OneWay}"
                                     DependentValueBinding="{Binding Path=Value}"
                                     IndependentValueBinding="{Binding Path=Key}" 
@@ -59,13 +58,14 @@
                       ColumnWidth="auto"
                       >
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Hour}"/>
+                        <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Day}"/>
                         <DataGridTextColumn Binding="{Binding Value}" Header="{x:Static resw:Resources.CountOfCommits}"/>
                     </DataGrid.Columns>
 
                 </DataGrid>
             </TabItem>
         </TabControl>
+
         <DockPanel Grid.Column="0" Grid.Row="2">
             <Button x:Name="SaveFileBtn" 
                     Background="{StaticResource MyGreen}"  
@@ -76,7 +76,7 @@
                     Command="{Binding ExportFileCommand}"
                     >
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=SaveFileBtn, Path=Width}" >
-                    <Image Source="../Assets/Icons/CSV Filled-50.png" Width="24" Margin="10,0,10,0"/>
+                    <Image Source="../../Assets/Icons/CSV Filled-50.png" Width="24" Margin="10,0,10,0"/>
                     <TextBlock Text="{x:Static resw:Resources.ExportToFileButton}" VerticalAlignment="Center"/>
                 </StackPanel>
             </Button>
