--- a/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DayActivityViews/DayActivityContentProviderView.xaml
@@ -1,11 +1,11 @@
-﻿<controls:MetroWindow x:Class="RepositoryParser.View.DayActivityChartView"
+﻿<controls:MetroWindow x:Class="RepositoryParser.View.DayActivityViews.DayActivityContentProviderView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RepositoryParser.View"
-        xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+        xmlns:local="clr-namespace:RepositoryParser.View.DayActivityViews"
         xmlns:resw="clr-namespace:RepositoryParser.Properties"
+        xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
         Title="{x:Static resw:Resources.DayActivityView}" Height="600" Width="800"
