--- a/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
+++ b/RepositoryParser/RepositoryParser/Resources/AppStyles.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:RepositoryParser.Resources"
-                    xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit">
+                    xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+                    xmlns:resw="clr-namespace:RepositoryParser.Properties">
     
     
     <Style x:Key="AppGraphiteButton" TargetType="Button">
@@ -81,5 +82,23 @@
         </Setter>
     </Style>
 
+    <Style x:Key="ExportButton" TargetType="Button">
+        <Setter Property="Height" Value="35"/>
+        <Setter Property="Foreground" Value="{StaticResource Grey}"/>
+        <Setter Property="Background" Value="{StaticResource Graphite}"/>
+        <Setter Property="FontWeight" Value="Light"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Width" Value="150"/>
+        <Setter Property="ContentTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="150">
+                        <Image Source="../../Assets/Icons/CSV_white.png" Width="24" Margin="10,0,10,0"/>
+                        <TextBlock Text="{x:Static resw:Resources.ExportToFileButton}" VerticalAlignment="Center" Foreground="{StaticResource Grey}"/>
+                    </StackPanel>
+                </DataTemplate>
+        </Setter.Value>
+        </Setter>
+    </Style>
 
 </ResourceDictionary>
