--- a/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityChartView.xaml
+++ b/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityChartView.xaml
@@ -1,14 +1,14 @@
-﻿<UserControl x:Class="RepositoryParser.View.MonthActivityViews.MonthActivityChartView"
+﻿<UserControl x:Class="RepositoryParser.View.WeekdayActivityViews.WeekdayActivityChartView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:RepositoryParser.View.MonthActivityViews"
+             xmlns:local="clr-namespace:RepositoryParser.View.WeekdayActivityViews"
              xmlns:resw="clr-namespace:RepositoryParser.Properties"
              xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="600"
-             DataContext="{Binding Source={StaticResource Locator}, Path=MonthActivity}"
+             DataContext="{Binding Source={StaticResource Locator}, Path=WeekdayActivity}"
              >
     <Grid>
         <Grid.RowDefinitions>
@@ -29,7 +29,7 @@
 
         <TabControl Grid.Column="1" Grid.Row="1">
             <TabItem Header="{x:Static resw:Resources.Chart}">
-                <chartingToolkit:Chart Title="{x:Static resw:Resources.MonthActivityChartChart}" Background="{StaticResource Grey}">
+                <chartingToolkit:Chart Title="{x:Static resw:Resources.WeekdayActivityChartChart}" Background="{StaticResource Grey}" >
                     <chartingToolkit:Chart.LegendStyle>
                         <Style TargetType="Control">
                             <Setter Property="Width" Value="0" />
@@ -37,15 +37,12 @@
                         </Style>
                     </chartingToolkit:Chart.LegendStyle>
                     <chartingToolkit:Chart.Series>
-                        <chartingToolkit:ColumnSeries
+                        <chartingToolkit:AreaSeries
                                     ItemsSource="{Binding KeyCollection, Mode=OneWay}"
                                     DependentValueBinding="{Binding Path=Value}"
-                                    IndependentValueBinding="{Binding Path=Key}"
-                                    DataPointStyle="{StaticResource ColumnDataPoint}"
-                            >
-                        </chartingToolkit:ColumnSeries>
+                                    IndependentValueBinding="{Binding Path=Key}">
+                        </chartingToolkit:AreaSeries>
                     </chartingToolkit:Chart.Series>
-
                 </chartingToolkit:Chart>
             </TabItem>
             <TabItem Header="{x:Static resw:Resources.List}">
@@ -57,7 +54,7 @@
                       ColumnWidth="auto"
                       >
                     <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Month}"/>
+                        <DataGridTextColumn Binding="{Binding Key}" Header="{x:Static resw:Resources.Weekday}"/>
                         <DataGridTextColumn Binding="{Binding Value}" Header="{x:Static resw:Resources.CountOfCommits}"/>
                     </DataGrid.Columns>
 
