--- a/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/WeekdayActivityViews/WeekdayActivityContentProviderView.xaml
@@ -61,7 +61,7 @@
 
         <Image Grid.Row="1"
                Grid.Column="1"
-               Source="../../Resources/../Assets/Images/arr2.png"
+               Source="../../Resources/../Assets/Images/notebook_statiscitcs.png"
                HorizontalAlignment="Center"
                VerticalAlignment="Center"
                Opacity="0.3"
