--- a/RepositoryParser/RepositoryParser/View/DataBaseManagementView.xaml
+++ b/RepositoryParser/RepositoryParser/View/DataBaseManagementView.xaml
@@ -15,6 +15,7 @@
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <conventers:NegativeBoolToVisibilityConventer x:Key="NegativeBoolToVisibilityConventer"/>
         <conventers:BoolToBackgroundColorConventer x:Key="BoolToBackgroundColorConventer"/>
+        <conventers:BoolToImageConventer x:Key="BoolToImageConventer"/>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -28,9 +29,21 @@
         </Grid.ColumnDefinitions>
 
         <Border Grid.Row="0" Grid.Column="1" Background="{StaticResource Graphite}">
-            <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.AnalysisWindowTitle}" HorizontalAlignment="Center"/>
+            <TextBlock Style="{StaticResource SubTitleTextBlock}" >
+                <Run Text="#"/>
+                <Run Text="{x:Static resw:Resources.DataBaseManagement}"/>
+            </TextBlock>
         </Border>
 
+        <Image Grid.Row="1" 
+               Grid.Column="0"  
+               Grid.ColumnSpan="2"
+               Source="{Binding IsGitRepositoryPicked, Converter={StaticResource BoolToImageConventer}}"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Opacity="0.2"
+               Margin="0,0,150,0"
+               />
         <Grid Grid.Row="1" Grid.Column="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -43,33 +56,28 @@
                 <RowDefinition Height="5"/>
             </Grid.RowDefinitions>
 
-            <Border Background="{StaticResource Graphite}" Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0">
-                <Label x:Name="UrlLabel"
-                       FontSize="16" 
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-                       Content="{x:Static resw:Resources.UrlAdress}"
-                       Foreground="{StaticResource Grey}"
-                       FontWeight="Light"
-                       />
-            </Border>
             <StackPanel Grid.Row="1" Grid.Column="0">
+
                 <TextBox x:Name="UrlTextBlock"
                      FontSize="16" 
-                     Margin="5" 
+                     Margin="5,15" 
                      Text="{Binding UrlTextBox}" 
                      Background="{Binding IsGitRepositoryPicked, Converter={StaticResource BoolToBackgroundColorConventer}}" 
                      Opacity="0.95"
                      BorderBrush="Black"
                      BorderThickness="1"
+                     controls:TextBoxHelper.Watermark="{x:Static resw:Resources.UrlAdress}"
                      />
                 <Button x:Name="PicFileBtn" 
                     HorizontalAlignment="Center" 
                     Command="{Binding PickFileCommand}" 
                     FontSize="14"
                     Padding="25,4"
-                    MinHeight="40"
+                    Height="40"
+                    Width="180"
+                    Margin="5,15,5,25"
                     Style="{StaticResource AppGraphiteButton}"
+
                     >
                     <StackPanel Orientation="Horizontal">
                         <Image Source="../Assets/Icons/Add File-100.png" Height="24" Width="24"/>
@@ -77,7 +85,7 @@
                     </StackPanel>
                 </Button>
 
-                <Grid Grid.Row="1" Grid.Column="0">
+                <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="3*"/>
@@ -112,13 +120,14 @@
                     IsEnabled="{Binding IsCloneButtonEnabled }" 
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
-                    Height="50"  
                     Background="{StaticResource MyGreen}" 
                     FontSize="20" 
                     Margin="2" 
                     Padding="4" 
                     MinWidth="250"
-                    FontWeight="Light"
+                    Style="{StaticResource AppGraphiteButton}"
+                    BorderThickness="1"
+                    BorderBrush="{StaticResource Graphite}"
                     >
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=CloneRepositoryBtn, Path=Width}" >
                         <Image Source="../Assets/Icons/Add Database-52.png" Width="24" Margin="10,0,10,0"/>
@@ -127,7 +136,7 @@
                 </Button>
             </StackPanel>
 
-            <StackPanel Grid.Row="1" Grid.Column="1" Grid.RowSpan="3" Margin="0,10,0,5">
+            <StackPanel Grid.Row="0" Grid.Column="1" Grid.RowSpan="3" Margin="0,10,0,5">
                 <Button x:Name="ClearDataBase" 
                     VerticalAlignment="Top" 
                     Style="{StaticResource AppGraphiteButton}"
@@ -136,16 +145,6 @@
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=ClearDataBase, Path=ActualWidth}" >
                         <Image Source="../Assets/Icons/Delete_grey.png" Width="24" Margin="10,0,10,0"/>
                         <TextBlock Text="{x:Static resw:Resources.ClearDBButton}" VerticalAlignment="Center" FontSize="13"/>
-                    </StackPanel>
-                </Button>
-
-                <Button x:Name="Save"
-                    VerticalAlignment="Bottom" 
-                    Style="{StaticResource AppGraphiteButton}"
-                    >
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=Save, Path=ActualWidth}" >
-                        <Image Source="../Assets/Icons/Export_grey.png" Width="24" Margin="10,0,10,0"/>
-                        <TextBlock Text="{x:Static resw:Resources.ExportToFileButton}" VerticalAlignment="Center" FontSize="13"/>
                     </StackPanel>
                 </Button>
             </StackPanel>
