--- a/RepositoryParser/RepositoryParser/View/MainWindow.xaml
+++ b/RepositoryParser/RepositoryParser/View/MainWindow.xaml
@@ -10,6 +10,9 @@
         mc:Ignorable="d"
         Title="{x:Static resw:Resources.MainWindowView}" Height="600" Width="1200"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+        xmlns:viewModel="clr-namespace:RepositoryParser.ViewModel"
+        xmlns:usersActivityViews="clr-namespace:RepositoryParser.View.UsersActivityViews"
+        xmlns:view="clr-namespace:RepositoryParser.View"
         DataContext="{Binding Source={StaticResource Locator}, Path=Main}"
         MinHeight="450" MinWidth="800"
         ShowIconOnTitleBar="True"
@@ -32,30 +35,35 @@
         <conventers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <conventers:NegativeBoolToVisibilityConventer x:Key="NegativeBoolToVisibilityConventer"/>
         <conventers:BoolToBackgroundColorConventer x:Key="BoolToBackgroundColorConventer"/>
+
+        <DataTemplate DataType="{x:Type viewModel:PresentationViewModel}">
+            <view:PresentationView/>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewModel:DataBaseManagementViewModel}">
+            <view:DataBaseManagementView/>
+        </DataTemplate>
     </Window.Resources>
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
-            <i:InvokeCommandAction Command="{Binding OnLoadCommand}"/>
+            <i:InvokeCommandAction Command="{Binding OpenEventCommand}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="6*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
-            <RowDefinition Height="35"/>
-            <RowDefinition Height="1.5*" MinHeight="85"/>
-            <RowDefinition Height="5*"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="5"/>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-        <Rectangle Grid.ColumnSpan="1000" Grid.Row="0">
+
+
+        <Rectangle Grid.ColumnSpan="2" Grid.Row="0" Grid.Column="0">
             <Rectangle.Fill>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="{StaticResource AppBorder}" Offset="0" />
@@ -64,185 +72,31 @@
         </Rectangle>
 
         <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Text="{x:Static resw:Resources.MainWindowTitle}" Style="{StaticResource AppTitleTextBlock}"></TextBlock>
-        
-        <Border Background="{StaticResource Graphite}" Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0">
-            <Label x:Name="UrlLabel"
-                       FontSize="16" 
-                       VerticalAlignment="Center"
-                       HorizontalAlignment="Center"
-                       Content="{x:Static resw:Resources.UrlAdress}"
-                       Foreground="{StaticResource Grey}"
-                       FontWeight="Light"
-                       />
-        </Border>
-        <StackPanel Grid.Row="2" Grid.Column="1">
-            <TextBox x:Name="UrlTextBlock"
-                     FontSize="16" 
-                     Margin="5" 
-                     Text="{Binding UrlTextBox}" 
-                     Background="{Binding IsGitRepositoryPicked, Converter={StaticResource BoolToBackgroundColorConventer}}" 
-                     Opacity="0.95"
-                     BorderBrush="Black"
-                     BorderThickness="1"
-                     />
-            <Button x:Name="PicFileBtn" 
-                    HorizontalAlignment="Center" 
-                    Command="{Binding PickFileCommand}" 
-                    FontSize="14"
-                    Padding="25,4"
-                    MinHeight="40"
-                    Style="{StaticResource AppGraphiteButton}"
+    
+        <StackPanel Grid.Row="1" Grid.Column="0">
+            <Button x:Name="PresentationBtn"
+                    Style="{StaticResource MainTile}"
+                    Command="{Binding OpenPresentationCommand}"
                     >
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="../Assets/Icons/Add File-100.png" Height="24" Width="24"/>
-                    <TextBlock Text="{x:Static resw:Resources.LocalAdress}"  VerticalAlignment="Center" Padding="5,0"/>
-                </StackPanel>
-            </Button>
-        </StackPanel>
-
-        <Grid Grid.Row="3" Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="3*"/>
-            </Grid.RowDefinitions>
-            
-        <StackPanel Grid.Row="0" Grid.Column="0">
-            <TextBlock Text="{x:Static resw:Resources.PickRepositoryType}" HorizontalAlignment="Center" FontSize="16"></TextBlock>
-            <Border BorderBrush="{StaticResource MyGreen}" BorderThickness="0,1">
-                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal" Margin="2">
-                    <Button Margin="4,0" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" MinWidth="90" Command="{Binding PickGitRepositoryCommand}">
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="../Assets/Icons/Git-64.png" Height="32" Width="32"/>
-                            <TextBlock Text="{x:Static resw:Resources.GitRepository}" VerticalAlignment="Center" Padding="5,0" FontSize="13" FontWeight="Light"/>
-                        </StackPanel>
-                    </Button>
-                    <Button Margin="4,0" VerticalAlignment="Center" Background="Transparent" BorderThickness="0" MinWidth="90" Command="{Binding PickSvnRepositoryCommand}">
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="../Assets/Icons/svn-64.ico" Height="32" Width="32"/>
-                                <TextBlock Text="{x:Static resw:Resources.SvnRepository}" VerticalAlignment="Center" Padding="5,0" FontSize="13" FontWeight="Light"/>
-                        </StackPanel>
-                    </Button>
-                </StackPanel>
-            </Border>
-        </StackPanel>
-
-            <DataGrid Grid.Row="1" Grid.Column="0"
-                      ItemsSource="{Binding CommitsColection}"
-                      CanUserSortColumns="True"
-                      AlternatingRowBackground="{StaticResource MyRowColor}" AlternationCount="2"
-                      AutoGenerateColumns="False"
-                      ColumnWidth="auto"
-                      >
-                <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding ID}" Header="{x:Static resw:Resources.CommitsList_ID}"/>
-                    <DataGridTextColumn Binding="{Binding Message}" Header="{x:Static resw:Resources.CommitsList_Message}" Width="400"/>
-                    <DataGridTextColumn Binding="{Binding Author}" Header="{x:Static resw:Resources.CommitsList_Author}"/>
-                    <DataGridTextColumn Binding="{Binding Date}" Header="{x:Static resw:Resources.CommitsList_Date}" SortMemberPath="Date"/>
-                    <DataGridTextColumn Binding="{Binding Email}" Header="{x:Static resw:Resources.CommitsList_Email}"/>
-                </DataGrid.Columns>
-
-            </DataGrid>
-
-        </Grid>
-
-        <StackPanel Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch">
-            <Button x:Name="CloneRepositoryBtn"
-                    Command="{Binding StartWorkCommand}" 
-                    IsEnabled="{Binding IsCloneButtonEnabled }" 
-                    HorizontalAlignment="Center" 
-                    VerticalAlignment="Center" 
-                    Height="50"  
-                    Background="{StaticResource MyGreen}" 
-                    FontSize="20" 
-                    Margin="2" 
-                    Padding="4" 
-                    MinWidth="250"
-                    FontWeight="Light"
-                    >
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=CloneRepositoryBtn, Path=Width}" >
-                    <Image Source="../Assets/Icons/Add Database-52.png" Width="24" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.AddRepositoryButton}" VerticalAlignment="Center"/>
-                </StackPanel>
-            </Button>
-        </StackPanel>
-
-        <DockPanel Grid.Row="2" Grid.Column="0" Margin="0,10,0,5">
-            <Button x:Name="GoToAnalisysBtn" 
-                    VerticalAlignment="Top" 
-                    Command="{Binding GoToPageAnalysisCommand}" 
-                    Style="{StaticResource AppGraphiteButton}"
-                    >
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=GoToAnalisysBtn, Path=ActualWidth}" >
-                    <Image Source="../Assets/Icons/Analysis_grey.png" Width="24" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.AnalysisButton}" VerticalAlignment="Center" FontSize="13"/>
-                </StackPanel>
-            </Button>
-
-        </DockPanel>
-
-        <StackPanel Grid.Row="2" Grid.Column="2" Margin="0,10,0,5" Grid.RowSpan="4">
-            <Button x:Name="ClearDataBase" 
-                    VerticalAlignment="Top" 
-                    Style="{StaticResource AppGraphiteButton}"
-                    Command="{Binding AsyncClearDBCommand}" 
-                    >
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=ClearDataBase, Path=ActualWidth}" >
-                    <Image Source="../Assets/Icons/Delete_grey.png" Width="24" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.ClearDBButton}" VerticalAlignment="Center" FontSize="13"/>
-                </StackPanel>
-            </Button>
-            <Button x:Name="RefreshBtn" 
-                    VerticalAlignment="Top"
-                    Command="{Binding RefreshCommand}" 
-                    Style="{StaticResource AppGraphiteButton}"
-                    Padding="0"
-                    >
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=RefreshBtn, Path=ActualWidth}" >
-                        <Image Source="../Assets/Icons/Refresh_grey.png" Width="24" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.RefreshButton}" VerticalAlignment="Center" FontSize="13"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=PresentationBtn, Path=ActualWidth}" >
+                        <Image Source="../Assets/Icons/Analysis_grey.png" Width="24" Margin="10,0,10,0"/>
+                        <TextBlock Text="{x:Static resw:Resources.Presentation}" Style="{StaticResource AppWhiteTextBlock}"/>
                     </StackPanel>
-            </Button>
-                    
-            <Button x:Name="Save"
-                    VerticalAlignment="Bottom" 
-                    Command="{Binding ExportFileCommand}"
-                    Style="{StaticResource AppGraphiteButton}"
+                </Button>
+
+            <Button x:Name="DBManagementBtn"
+                    Style="{StaticResource MainTile}"
+                    Command="{Binding OpenDataBaseManagementCommand}"
                     >
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=Save, Path=ActualWidth}" >
-                    <Image Source="../Assets/Icons/Export_grey.png" Width="24" Margin="10,0,10,0"/>
-                    <TextBlock Text="{x:Static resw:Resources.ExportToFileButton}" VerticalAlignment="Center" FontSize="13"/>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="{Binding ElementName=DBManagementBtn, Path=ActualWidth}" >
+                    <Image Source="../Assets/Icons/Analysis_grey.png" Width="24" Margin="10,0,10,0"/>
+                    <TextBlock Text="{x:Static resw:Resources.DataBaseManagement}" Style="{StaticResource AppWhiteTextBlock}"/>
                 </StackPanel>
             </Button>
         </StackPanel>
+
+        <ContentControl Grid.Row="1" Grid.Column="1" Content="{Binding CurrentViewModel}"/>
         
-        <StatusBar Grid.Row="0" Grid.Column="0" 
-                   Grid.RowSpan="6"
-                   Grid.ColumnSpan="3"
-                   Visibility="{Binding ProgressBarVisibility, Converter={StaticResource BoolToVisibilityConverter}, UpdateSourceTrigger=PropertyChanged}"  
-                   Opacity="0.75"
-                   Background="{StaticResource Grey}"
-                   HorizontalAlignment="Stretch"
-                   VerticalAlignment="Stretch"
-                   >
-        </StatusBar>
-        <StackPanel Orientation="Horizontal" Grid.Row="0" 
-                    Grid.Column="0" Grid.RowSpan="5"
-                    Grid.ColumnSpan="3" 
-                    VerticalAlignment="Center" HorizontalAlignment="Center"
-                    Visibility="{Binding ProgressBarVisibility, Converter={StaticResource BoolToVisibilityConverter}, UpdateSourceTrigger=PropertyChanged}"
-                    >
-            <Controls:ProgressRing HorizontalAlignment="Center"
-                                       VerticalAlignment="Center"
-                                       IsActive="{Binding ProgressBarVisibility}"
-                                       Width="100"
-                                       Height="18"
-                                       Margin="3"
-                                       Opacity="1"
-                                       Foreground="{StaticResource Graphite}"
-                                       />
-            <Separator/>
-            <TextBlock Text="{x:Static resw:Resources.ProgressBarText}" Foreground="{StaticResource MyGreen}" FontSize="18" Visibility="{Binding IsOpening, Converter={StaticResource BoolToVisibilityConverter}}"/>
-            <TextBlock Text="{x:Static resw:Resources.ClearingDataBase}" Foreground="{StaticResource MyGreen}" FontSize="18" Visibility="{Binding IsOpening, Converter={StaticResource NegativeBoolToVisibilityConventer}}"/>
-        </StackPanel>
+        
     </Grid>
 </Controls:MetroWindow>
