--- a/RepositoryParser/RepositoryParser/View/PresentationView.xaml
+++ b/RepositoryParser/RepositoryParser/View/PresentationView.xaml
@@ -14,7 +14,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="70"/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -24,7 +24,10 @@
         </Grid.ColumnDefinitions>
 
         <Border Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Background="{StaticResource Graphite}">
-            <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.AnalysisWindowTitle}" HorizontalAlignment="Center"/>
+            <TextBlock Style="{StaticResource SubTitleTextBlock}" >
+                <Run Text="#"/>
+                <Run Text="{x:Static resw:Resources.Presentation}"/>
+            </TextBlock>
         </Border>
         
         <DataGrid Grid.Row="1" Grid.Column="1"
@@ -37,11 +40,20 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding ID}" Header="{x:Static resw:Resources.CommitsList_ID}"/>
                 <DataGridTextColumn Binding="{Binding Message}" Header="{x:Static resw:Resources.CommitsList_Message}" Width="400"/>
-                <DataGridTextColumn Binding="{Binding Author}" Header="{x:Static resw:Resources.CommitsList_Author}"/>
+                <DataGridTextColumn Binding="{Binding Author}" Header="{x:Static resw:Resources.CommitsList_Author}" Width="150"/>
                 <DataGridTextColumn Binding="{Binding Date}" Header="{x:Static resw:Resources.CommitsList_Date}" SortMemberPath="Date"/>
                 <DataGridTextColumn Binding="{Binding Email}" Header="{x:Static resw:Resources.CommitsList_Email}"/>
             </DataGrid.Columns>
-
         </DataGrid>
+        
+        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Button Style="{StaticResource ExportButton}" Command="{Binding ExportFileCommand}"/>
+            <Button Style="{StaticResource AppGraphiteButton}" Command="{Binding RefreshCommand}" Height="35" Margin="5" Width="150">
+                <StackPanel Orientation="Horizontal" Width="{Binding ElementName=SendBtn, Path=Width}">
+                    <Image Source="../Assets/Icons/Refresh_grey.png" Height="24" Margin="2,0,10,0"/>
+                    <TextBlock Text="{x:Static resw:Resources.RefreshButton}" VerticalAlignment="Center" FontWeight="Light" FontSize="13"/>
+                </StackPanel>
+            </Button>
+        </StackPanel>
     </Grid>
 </UserControl>
