--- a/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/MonthActivityViews/MonthActivityContentProviderView.xaml
@@ -1,27 +1,22 @@
-﻿<controls:MetroWindow x:Class="RepositoryParser.View.MonthActivityViews.MonthActivityContentProviderView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RepositoryParser.View.MonthActivityViews"
-        xmlns:resw="clr-namespace:RepositoryParser.Properties"
-        xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:viewModel="clr-namespace:RepositoryParser.ViewModel"
-        xmlns:hourActivityViews="clr-namespace:RepositoryParser.View.HourActivityViews"
-        xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        mc:Ignorable="d"
-        Title="{x:Static resw:Resources.MonthActivity}" Height="600" Width="800"
-        DataContext="{Binding Source={StaticResource Locator}, Path=MonthActivityContentProvider}"
-        Icon="../../Assets/Icons/Chart_Icon_Main.png">
-    <Window.Resources>
+﻿<UserControl x:Class="RepositoryParser.View.MonthActivityViews.MonthActivityContentProviderView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:RepositoryParser.View.MonthActivityViews"
+             xmlns:resw="clr-namespace:RepositoryParser.Properties"
+             xmlns:viewModel="clr-namespace:RepositoryParser.ViewModel"
+             xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             mc:Ignorable="d" 
+             d:DesignHeight="600" d:DesignWidth="600">
+    <UserControl.Resources>
         <DataTemplate DataType="{x:Type viewModel:MonthActivityChartViewModel}">
             <local:MonthActivityChartView/>
         </DataTemplate>
 
         <conventers:ViewModelBaseToVisibilityConventer x:Key="ViewModelBaseToVisibilityConventer"/>
-    </Window.Resources>
+    </UserControl.Resources>
 
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Closed">
@@ -49,8 +44,8 @@
         </Rectangle>
         <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{x:Static resw:Resources.MonthActivityWindowTitle}" Style="{StaticResource AppTitleTextBlock}" />
         <StackPanel Grid.Column="0" Grid.Row="1" Grid.RowSpan="2">
-            <Button Style="{StaticResource AppGraphiteButton}" Command="{Binding OpenChartViewCommand}" x:Name="Btn1">
-                <StackPanel Orientation="Horizontal" Width="{Binding ElementName=Btn1, Path=ActualWidth}">
+            <Button Style="{StaticResource AppGraphiteButton}" Command="{Binding OpenChartViewCommand}" x:Name="Btn01">
+                <StackPanel Orientation="Horizontal" Width="{Binding ElementName=Btn01, Path=ActualWidth}">
                     <Image Style="{StaticResource AppButtonIcon}"  Source="../../Assets/Icons/Poll Topic-50.png" />
                     <TextBlock Style="{StaticResource AppWhiteTextBlock}" Text="{x:Static resw:Resources.CountOfCommits}"/>
                 </StackPanel>
@@ -71,5 +66,4 @@
                />
 
     </Grid>
-</controls:MetroWindow>
-
+</UserControl>
