--- a/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityContentProviderView.xaml
+++ b/RepositoryParser/RepositoryParser/View/UsersActivityViews/UserActivityContentProviderView.xaml
@@ -1,20 +1,18 @@
-﻿<controls:MetroWindow x:Class="RepositoryParser.View.UsersActivityViews.UserActivityContentProviderView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RepositoryParser.View.UsersActivityViews"
-        xmlns:resw="clr-namespace:RepositoryParser.Properties"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:viewModel="clr-namespace:RepositoryParser.ViewModel"
-        xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        mc:Ignorable="d"
-        Title="{x:Static resw:Resources.UserActivityView}" Height="600" Width="800"
-        DataContext="{Binding Source={StaticResource Locator}, Path=UsersActivityContentProvider}"
-        Icon="../../Assets/Icons/Chart_Icon_Main.png"
-        >
-    <Window.Resources>
+﻿<UserControl x:Class="RepositoryParser.View.UsersActivityViews.UserActivityContentProviderView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:RepositoryParser.View.UsersActivityViews"
+             xmlns:viewModel="clr-namespace:RepositoryParser.ViewModel"
+             xmlns:conventers="clr-namespace:RepositoryParser.Conventers"
+             xmlns:resw="clr-namespace:RepositoryParser.Properties"
+             mc:Ignorable="d" 
+             d:DesignHeight="600" d:DesignWidth="600"
+             DataContext="{Binding Source={StaticResource Locator}, Path=UsersActivityContentProvider}"
+             
+             >
+    <UserControl.Resources>
         <DataTemplate DataType="{x:Type viewModel:ChartWindowViewModel}">
             <local:UserActivityChartView/>
         </DataTemplate>
@@ -24,13 +22,7 @@
         </DataTemplate>
 
         <conventers:ViewModelBaseToVisibilityConventer x:Key="ViewModelBaseToVisibilityConventer"/>
-    </Window.Resources>
-
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Closed">
-            <i:InvokeCommandAction Command="{Binding ClosedEventCommand}"/>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -80,5 +72,4 @@
                />
 
     </Grid>
-</controls:MetroWindow>
-
+</UserControl>
