--- a/RepositoryParser/RepositoryParser/View/AnalysisView.xaml
+++ b/RepositoryParser/RepositoryParser/View/AnalysisView.xaml
@@ -23,13 +23,13 @@
              >
     
     <UserControl.Resources>
-<!--        <DataTemplate DataType="{x:Type dayActivityViewModels:DayActivityContentProviderViewModel}">
+        <DataTemplate DataType="{x:Type dayActivityViewModels:DayActivityContentProviderViewModel}">
             <dayActivityViews:DayActivityContentProviderView/>
         </DataTemplate>
 
         <DataTemplate DataType="{x:Type hourActivityViewModels:HourActivityContentProviderViewModel}">
             <hourActivityViews:HourActivityContentProviderView/>
-        </DataTemplate>-->
+        </DataTemplate>
 
         <DataTemplate DataType="{x:Type monthActivityViewModels:MonthActivityContentProviderViewModel}">
             <monthActivityViews:MonthActivityContentProviderView/>
@@ -94,6 +94,26 @@
                 <StackPanel Orientation="Horizontal" Width="{Binding ElementName=MonthBtn, Path=ActualWidth}">
                     <Image Source="../Assets/Icons/Column-Chart.png" Height="24" Margin="2,0,10,0"/>
                     <TextBlock Text="{x:Static resw:Resources.WeekdayActivityAnalyseButton}" VerticalAlignment="Center" FontSize="13"/>
+                </StackPanel>
+            </Button>
+
+            <Button x:Name="DayBtn" 
+                    Style="{StaticResource MainTile}"
+                    Command="{Binding  OpenDayActivityCommand}"
+                    >
+                <StackPanel Orientation="Horizontal" Width="{Binding ElementName=DayBtn, Path=ActualWidth}">
+                    <Image Source="../Assets/Icons/Column-Chart.png" Height="24" Margin="2,0,10,0"/>
+                    <TextBlock Text="{x:Static resw:Resources.MonthDayActivityAnalyseButton}" VerticalAlignment="Center" FontSize="13"/>
+                </StackPanel>
+            </Button>
+
+            <Button x:Name="HourBtn" 
+                    Style="{StaticResource MainTile}"
+                    Command="{Binding  OpenHourActivityCommand}"
+                    >
+                <StackPanel Orientation="Horizontal" Width="{Binding ElementName=HourBtn, Path=ActualWidth}">
+                    <Image Source="../Assets/Icons/Column-Chart.png" Height="24" Margin="2,0,10,0"/>
+                    <TextBlock Text="{x:Static resw:Resources.HourActivityAnalyseButton}" VerticalAlignment="Center" FontSize="13"/>
                 </StackPanel>
             </Button>
         </StackPanel>
